// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CatalogPage > показывает загрузку, ошибку и пустой каталог 1`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-spinning"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <h3
        class="ant-typography"
        style="margin-top: 0px;"
      >
        Каталог
      </h3>
      <div
        class="ant-flex ant-flex-gap-middle"
        style="min-width: 0px; width: 100%;"
      >
        <button
          aria-expanded="true"
          aria-label="Скрыть категории"
          class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only"
          disabled=""
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="filter"
              class="anticon anticon-filter"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="filter"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880.1 154H143.9c-24.5 0-39.8 26.7-27.5 48L349 597.4V838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V597.4L907.7 202c12.2-21.3-3.1-48-27.6-48zM603.4 798H420.6V642h182.9v156zm9.6-236.6l-9.5 16.6h-183l-9.5-16.6L212.7 226h598.6L613 561.4z"
                />
              </svg>
            </span>
          </span>
        </button>
        <div
          aria-label="segmented control"
          aria-orientation="horizontal"
          class="ant-segmented ant-segmented-disabled"
          role="radiogroup"
        >
          <div
            class="ant-segmented-group"
          >
            <label
              class="ant-segmented-item ant-segmented-item-selected ant-segmented-item-disabled"
            >
              <input
                checked=""
                class="ant-segmented-item-input"
                disabled=""
                name="test-id"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="По поливу"
              >
                По поливу
              </div>
            </label>
            <label
              class="ant-segmented-item ant-segmented-item-disabled"
            >
              <input
                class="ant-segmented-item-input"
                disabled=""
                name="test-id"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="По подкормке"
              >
                По подкормке
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        class="ant-flex ant-flex-align-flex-start"
        style="margin-top: 16px; gap: 16px;"
      >
        <aside
          aria-label="Фильтр по категориям"
          style="background: rgb(230, 244, 255); border: 1px solid rgb(145, 202, 255); border-radius: 8px; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03),
      0 1px 6px -1px rgba(0, 0, 0, 0.02),
      0 2px 4px 0 rgba(0, 0, 0, 0.02); flex-shrink: 0; padding: 16px; width: 280px;"
        >
          <span
            class="ant-typography"
            style="color: rgb(22, 119, 255); display: block; margin-bottom: 12px;"
          >
            <strong>
              Категории
            </strong>
          </span>
          <div
            class="ant-flex ant-flex-wrap-wrap"
            style="gap: 8px;"
          >
            <span>
              <span
                class="ant-tag ant-tag-checkable"
                style="background: rgb(255, 255, 255); border: 1px solid rgb(217, 217, 217); border-radius: 4px; color: rgba(0, 0, 0, 0.88); line-height: 1.4; margin-inline-end: 0px; overflow-wrap: anywhere; padding: 4px 10px; white-space: normal; word-break: break-word;"
              >
                <span>
                  Декоративные
                </span>
              </span>
            </span>
          </div>
        </aside>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`CatalogPage > показывает загрузку, ошибку и пустой каталог 2`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <h3
        class="ant-typography"
        style="margin-top: 0px;"
      >
        Каталог
      </h3>
      <div
        class="ant-flex ant-flex-gap-middle"
        style="min-width: 0px; width: 100%;"
      >
        <button
          aria-expanded="true"
          aria-label="Скрыть категории"
          class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="filter"
              class="anticon anticon-filter"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="filter"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880.1 154H143.9c-24.5 0-39.8 26.7-27.5 48L349 597.4V838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V597.4L907.7 202c12.2-21.3-3.1-48-27.6-48zM603.4 798H420.6V642h182.9v156zm9.6-236.6l-9.5 16.6h-183l-9.5-16.6L212.7 226h598.6L613 561.4z"
                />
              </svg>
            </span>
          </span>
        </button>
        <div
          aria-label="segmented control"
          aria-orientation="horizontal"
          class="ant-segmented"
          role="radiogroup"
          tabindex="0"
        >
          <div
            class="ant-segmented-group"
          >
            <label
              class="ant-segmented-item ant-segmented-item-selected"
            >
              <input
                checked=""
                class="ant-segmented-item-input"
                name="test-id"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="По поливу"
              >
                По поливу
              </div>
            </label>
            <label
              class="ant-segmented-item"
            >
              <input
                class="ant-segmented-item-input"
                name="test-id"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="По подкормке"
              >
                По подкормке
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        class="ant-flex ant-flex-align-flex-start"
        style="margin-top: 16px; gap: 16px;"
      >
        <aside
          aria-label="Фильтр по категориям"
          style="background: rgb(230, 244, 255); border: 1px solid rgb(145, 202, 255); border-radius: 8px; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03),
      0 1px 6px -1px rgba(0, 0, 0, 0.02),
      0 2px 4px 0 rgba(0, 0, 0, 0.02); flex-shrink: 0; padding: 16px; width: 280px;"
        >
          <span
            class="ant-typography"
            style="color: rgb(22, 119, 255); display: block; margin-bottom: 12px;"
          >
            <strong>
              Категории
            </strong>
          </span>
          <div
            class="ant-flex ant-flex-wrap-wrap"
            style="gap: 8px;"
          >
            <span>
              <span
                class="ant-tag ant-tag-checkable"
                style="background: rgb(255, 255, 255); border: 1px solid rgb(217, 217, 217); border-radius: 4px; color: rgba(0, 0, 0, 0.88); line-height: 1.4; margin-inline-end: 0px; overflow-wrap: anywhere; padding: 4px 10px; white-space: normal; word-break: break-word;"
              >
                <span>
                  Декоративные
                </span>
              </span>
            </span>
          </div>
        </aside>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            class="ant-alert ant-alert-error ant-alert-with-description"
            data-show="true"
            role="alert"
          >
            <span
              aria-label="close-circle"
              class="anticon anticon-close-circle ant-alert-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close-circle"
                fill="currentColor"
                fill-rule="evenodd"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                />
              </svg>
            </span>
            <div
              class="ant-alert-content"
            >
              <div
                class="ant-alert-message"
              >
                Нет связи
              </div>
              <div
                class="ant-alert-description"
              >
                <div>
                  <div
                    style="margin-top: 0px;"
                  >
                    <button
                      class="ant-btn ant-btn-primary ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-solid"
                      type="button"
                    >
                      <span>
                        Повторить
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CatalogPage > показывает загрузку, ошибку и пустой каталог 3`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <h3
        class="ant-typography"
        style="margin-top: 0px;"
      >
        Каталог
      </h3>
      <div
        class="ant-flex ant-flex-gap-middle"
        style="min-width: 0px; width: 100%;"
      >
        <button
          aria-expanded="true"
          aria-label="Скрыть категории"
          class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="filter"
              class="anticon anticon-filter"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="filter"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880.1 154H143.9c-24.5 0-39.8 26.7-27.5 48L349 597.4V838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V597.4L907.7 202c12.2-21.3-3.1-48-27.6-48zM603.4 798H420.6V642h182.9v156zm9.6-236.6l-9.5 16.6h-183l-9.5-16.6L212.7 226h598.6L613 561.4z"
                />
              </svg>
            </span>
          </span>
        </button>
        <div
          aria-label="segmented control"
          aria-orientation="horizontal"
          class="ant-segmented"
          role="radiogroup"
          tabindex="0"
        >
          <div
            class="ant-segmented-group"
          >
            <label
              class="ant-segmented-item ant-segmented-item-selected"
            >
              <input
                checked=""
                class="ant-segmented-item-input"
                name="test-id"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="По поливу"
              >
                По поливу
              </div>
            </label>
            <label
              class="ant-segmented-item"
            >
              <input
                class="ant-segmented-item-input"
                name="test-id"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="По подкормке"
              >
                По подкормке
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        class="ant-flex ant-flex-align-flex-start"
        style="margin-top: 16px; gap: 16px;"
      >
        <aside
          aria-label="Фильтр по категориям"
          style="background: rgb(230, 244, 255); border: 1px solid rgb(145, 202, 255); border-radius: 8px; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03),
      0 1px 6px -1px rgba(0, 0, 0, 0.02),
      0 2px 4px 0 rgba(0, 0, 0, 0.02); flex-shrink: 0; padding: 16px; width: 280px;"
        >
          <span
            class="ant-typography"
            style="color: rgb(22, 119, 255); display: block; margin-bottom: 12px;"
          >
            <strong>
              Категории
            </strong>
          </span>
          <div
            class="ant-flex ant-flex-wrap-wrap"
            style="gap: 8px;"
          >
            <span>
              <span
                class="ant-tag ant-tag-checkable"
                style="background: rgb(255, 255, 255); border: 1px solid rgb(217, 217, 217); border-radius: 4px; color: rgba(0, 0, 0, 0.88); line-height: 1.4; margin-inline-end: 0px; overflow-wrap: anywhere; padding: 4px 10px; white-space: normal; word-break: break-word;"
              >
                <span>
                  Декоративные
                </span>
              </span>
            </span>
          </div>
        </aside>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            class="ant-empty"
            style="margin-top: 48px;"
          >
            <div
              class="ant-empty-image"
            >
              <svg
                height="152"
                viewBox="0 0 184 152"
                width="184"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Нет данных
                </title>
                <g
                  fill="none"
                  fill-rule="evenodd"
                >
                  <g
                    transform="translate(24 31.67)"
                  >
                    <ellipse
                      cx="67.797"
                      cy="106.89"
                      fill="#F5F5F7"
                      fill-opacity=".8"
                      rx="67.797"
                      ry="12.668"
                    />
                    <path
                      d="M122.034 69.674L98.109 40.229c-1.148-1.386-2.826-2.225-4.593-2.225h-51.44c-1.766 0-3.444.839-4.592 2.225L13.56 69.674v15.383h108.475V69.674z"
                      fill="#AEB8C2"
                    />
                    <path
                      d="M101.537 86.214L80.63 61.102c-1.001-1.207-2.507-1.867-4.048-1.867H31.724c-1.54 0-3.047.66-4.048 1.867L6.769 86.214v13.792h94.768V86.214z"
                      fill="url(#linearGradient-1)"
                      transform="translate(13.56)"
                    />
                    <path
                      d="M33.83 0h67.933a4 4 0 0 1 4 4v93.344a4 4 0 0 1-4 4H33.83a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4z"
                      fill="#F5F5F7"
                    />
                    <path
                      d="M42.678 9.953h50.237a2 2 0 0 1 2 2V36.91a2 2 0 0 1-2 2H42.678a2 2 0 0 1-2-2V11.953a2 2 0 0 1 2-2zM42.94 49.767h49.713a2.262 2.262 0 1 1 0 4.524H42.94a2.262 2.262 0 0 1 0-4.524zM42.94 61.53h49.713a2.262 2.262 0 1 1 0 4.525H42.94a2.262 2.262 0 0 1 0-4.525zM121.813 105.032c-.775 3.071-3.497 5.36-6.735 5.36H20.515c-3.238 0-5.96-2.29-6.734-5.36a7.309 7.309 0 0 1-.222-1.79V69.675h26.318c2.907 0 5.25 2.448 5.25 5.42v.04c0 2.971 2.37 5.37 5.277 5.37h34.785c2.907 0 5.277-2.421 5.277-5.393V75.1c0-2.972 2.343-5.426 5.25-5.426h26.318v33.569c0 .617-.077 1.216-.221 1.789z"
                      fill="#DCE0E6"
                    />
                  </g>
                  <path
                    d="M149.121 33.292l-6.83 2.65a1 1 0 0 1-1.317-1.23l1.937-6.207c-2.589-2.944-4.109-6.534-4.109-10.408C138.802 8.102 148.92 0 161.402 0 173.881 0 184 8.102 184 18.097c0 9.995-10.118 18.097-22.599 18.097-4.528 0-8.744-1.066-12.28-2.902z"
                    fill="#DCE0E6"
                  />
                  <g
                    fill="#FFF"
                    transform="translate(149.65 15.383)"
                  >
                    <ellipse
                      cx="20.654"
                      cy="3.167"
                      rx="2.849"
                      ry="2.815"
                    />
                    <path
                      d="M5.698 5.63H0L2.898.704zM9.259.704h4.985V5.63H9.259z"
                    />
                  </g>
                </g>
              </svg>
            </div>
            <div
              class="ant-empty-description"
            >
              Растений пока нет
            </div>
            <div
              class="ant-empty-footer"
            >
              <a
                data-discover="true"
                href="/add"
              >
                Добавить растение
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CatalogPage > сортирует по поливу и оставляет порядок подкормки 1`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <h3
        class="ant-typography"
        style="margin-top: 0px;"
      >
        Каталог
      </h3>
      <div
        class="ant-flex ant-flex-gap-middle"
        style="min-width: 0px; width: 100%;"
      >
        <button
          aria-expanded="true"
          aria-label="Скрыть категории"
          class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="filter"
              class="anticon anticon-filter"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="filter"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880.1 154H143.9c-24.5 0-39.8 26.7-27.5 48L349 597.4V838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V597.4L907.7 202c12.2-21.3-3.1-48-27.6-48zM603.4 798H420.6V642h182.9v156zm9.6-236.6l-9.5 16.6h-183l-9.5-16.6L212.7 226h598.6L613 561.4z"
                />
              </svg>
            </span>
          </span>
        </button>
        <div
          aria-label="segmented control"
          aria-orientation="horizontal"
          class="ant-segmented"
          role="radiogroup"
          tabindex="0"
        >
          <div
            class="ant-segmented-group"
          >
            <label
              class="ant-segmented-item ant-segmented-item-selected"
            >
              <input
                checked=""
                class="ant-segmented-item-input"
                name="test-id"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="По поливу"
              >
                По поливу
              </div>
            </label>
            <label
              class="ant-segmented-item"
            >
              <input
                class="ant-segmented-item-input"
                name="test-id"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="По подкормке"
              >
                По подкормке
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        class="ant-flex ant-flex-align-flex-start"
        style="margin-top: 16px; gap: 16px;"
      >
        <aside
          aria-label="Фильтр по категориям"
          style="background: rgb(230, 244, 255); border: 1px solid rgb(145, 202, 255); border-radius: 8px; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03),
      0 1px 6px -1px rgba(0, 0, 0, 0.02),
      0 2px 4px 0 rgba(0, 0, 0, 0.02); flex-shrink: 0; padding: 16px; width: 280px;"
        >
          <span
            class="ant-typography"
            style="color: rgb(22, 119, 255); display: block; margin-bottom: 12px;"
          >
            <strong>
              Категории
            </strong>
          </span>
          <div
            class="ant-flex ant-flex-wrap-wrap"
            style="gap: 8px;"
          >
            <span>
              <span
                class="ant-tag ant-tag-checkable"
                style="background: rgb(255, 255, 255); border: 1px solid rgb(217, 217, 217); border-radius: 4px; color: rgba(0, 0, 0, 0.88); line-height: 1.4; margin-inline-end: 0px; overflow-wrap: anywhere; padding: 4px 10px; white-space: normal; word-break: break-word;"
              >
                <span>
                  Декоративные
                </span>
              </span>
            </span>
          </div>
        </aside>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            class="ant-row"
            style="margin-left: -8px; margin-right: -8px; row-gap: 16px;"
          >
            <div
              class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-6"
              style="padding-left: 8px; padding-right: 8px; min-width: 0px;"
            >
              <div
                class="ant-card ant-card-bordered"
                style="min-width: 0px; width: 100%;"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-space ant-space-vertical ant-space-align-start ant-space-gap-row-middle ant-space-gap-col-middle"
                    style="min-width: 0px; width: 100%;"
                  >
                    <div
                      class="ant-space-item"
                      style="align-self: stretch; min-width: 0px; width: 100%;"
                    >
                      <div
                        class="plant-card__photo"
                      >
                        <div
                          class="ant-image"
                          title="Нажмите для просмотра"
                        >
                          <img
                            alt="Раньше"
                            class="ant-image-img"
                            src="http://localhost:3001/files/img-1/thumb"
                            style="cursor: pointer; object-fit: cover; border-radius: 8px;"
                          />
                          <div
                            class="ant-image-mask"
                          >
                            <div
                              class="ant-image-mask-info"
                            >
                              <span
                                aria-label="eye"
                                class="anticon anticon-eye"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="eye"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                                  />
                                </svg>
                              </span>
                              Предпросмотр
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                      style="align-self: stretch; min-width: 0px; width: 100%;"
                    >
                      <h5
                        class="ant-typography"
                        style="margin: 0px;"
                      >
                        Раньше
                      </h5>
                    </div>
                    <div
                      class="ant-space-item"
                      style="align-self: stretch; min-width: 0px; width: 100%;"
                    >
                      <div
                        style="align-items: center; column-gap: 8px; display: grid; grid-template-columns: max-content 1fr; row-gap: 4px; width: 100%;"
                      >
                        <span
                          class="ant-typography ant-typography-secondary"
                        >
                          Полив
                        </span>
                        <div
                          style="min-width: 0px; width: 100%;"
                        >
                          <div
                            aria-valuemax="100"
                            aria-valuemin="0"
                            aria-valuenow="0"
                            class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-small"
                            role="progressbar"
                            style="width: 100%;"
                          >
                            <div
                              class="ant-progress-outer"
                              style="width: 100%;"
                            >
                              <div
                                class="ant-progress-inner"
                                style="background-color: rgb(255, 77, 79);"
                              >
                                <div
                                  class="ant-progress-bg ant-progress-bg-outer"
                                  style="width: 0%; height: 6px; --progress-line-stroke-color: #ff4d4f; background: rgb(255, 77, 79); --progress-percent: 0;"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <span
                          class="ant-typography ant-typography-secondary"
                          style="font-size: 12px; grid-column: 1 / -1;"
                        >
                          просрочено на 14 дн.
                        </span>
                        <span
                          class="ant-typography ant-typography-secondary"
                        >
                          Подкормка
                        </span>
                        <div
                          style="min-width: 0px; width: 100%;"
                        >
                          <div
                            aria-valuemax="100"
                            aria-valuemin="0"
                            aria-valuenow="30"
                            class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-small"
                            role="progressbar"
                            style="width: 100%;"
                          >
                            <div
                              class="ant-progress-outer"
                              style="width: 100%;"
                            >
                              <div
                                class="ant-progress-inner"
                              >
                                <div
                                  class="ant-progress-bg ant-progress-bg-outer"
                                  style="width: 30%; height: 6px; --progress-line-stroke-color: #fa8c16; background: rgb(250, 140, 22); --progress-percent: 0.3;"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                      style="align-self: stretch; min-width: 0px; width: 100%;"
                    >
                      <div
                        class="ant-flex ant-flex-wrap-wrap"
                        style="min-width: 0px; width: 100%; gap: 8px;"
                      >
                        <button
                          class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                          style="height: auto; max-width: 100%; min-height: 32px; min-width: 0px; white-space: normal;"
                          type="button"
                        >
                          <span>
                            Полил сегодня
                          </span>
                        </button>
                        <button
                          class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                          style="height: auto; max-width: 100%; min-height: 32px; min-width: 0px; white-space: normal;"
                          type="button"
                        >
                          <span>
                            Подкормил сегодня
                          </span>
                        </button>
                        <button
                          class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                          type="button"
                        >
                          <span>
                            Состояние
                          </span>
                        </button>
                        <a
                          data-discover="true"
                          href="/plants/sooner/edit"
                          style="max-width: 100%; min-width: 0px;"
                        >
                          <button
                            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                            style="height: auto; max-width: 100%; min-height: 32px; min-width: 0px; white-space: normal;"
                            type="button"
                          >
                            <span>
                              Редактировать
                            </span>
                          </button>
                        </a>
                        <button
                          aria-describedby="id"
                          class="ant-btn ant-btn-default ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-outlined"
                          type="button"
                        >
                          <span>
                            Удалить
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-6"
              style="padding-left: 8px; padding-right: 8px; min-width: 0px;"
            >
              <div
                class="ant-card ant-card-bordered"
                style="min-width: 0px; width: 100%;"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-space ant-space-vertical ant-space-align-start ant-space-gap-row-middle ant-space-gap-col-middle"
                    style="min-width: 0px; width: 100%;"
                  >
                    <div
                      class="ant-space-item"
                      style="align-self: stretch; min-width: 0px; width: 100%;"
                    >
                      <div
                        class="plant-card__photo"
                      >
                        <div
                          class="ant-image"
                          title="Нажмите для просмотра"
                        >
                          <img
                            alt="Без обложки"
                            class="ant-image-img"
                            src="http://localhost:3001/files/img-1/thumb"
                            style="cursor: pointer; object-fit: cover; border-radius: 8px;"
                          />
                          <div
                            class="ant-image-mask"
                          >
                            <div
                              class="ant-image-mask-info"
                            >
                              <span
                                aria-label="eye"
                                class="anticon anticon-eye"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="eye"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                                  />
                                </svg>
                              </span>
                              Предпросмотр
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                      style="align-self: stretch; min-width: 0px; width: 100%;"
                    >
                      <h5
                        class="ant-typography"
                        style="margin: 0px;"
                      >
                        Без обложки
                      </h5>
                    </div>
                    <div
                      class="ant-space-item"
                      style="align-self: stretch; min-width: 0px; width: 100%;"
                    >
                      <div
                        style="align-items: center; column-gap: 8px; display: grid; grid-template-columns: max-content 1fr; row-gap: 4px; width: 100%;"
                      >
                        <span
                          class="ant-typography ant-typography-secondary"
                        >
                          Полив
                        </span>
                        <div
                          style="min-width: 0px; width: 100%;"
                        >
                          <div
                            aria-valuemax="100"
                            aria-valuemin="0"
                            aria-valuenow="71"
                            class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-small"
                            role="progressbar"
                            style="width: 100%;"
                          >
                            <div
                              class="ant-progress-outer"
                              style="width: 100%;"
                            >
                              <div
                                class="ant-progress-inner"
                              >
                                <div
                                  class="ant-progress-bg ant-progress-bg-outer"
                                  style="width: 71%; height: 6px; --progress-line-stroke-color: #bae637; background: rgb(186, 230, 55); --progress-percent: 0.71;"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <span
                          class="ant-typography ant-typography-secondary"
                          style="font-size: 12px; grid-column: 1 / -1;"
                        >
                          через 5 дней
                        </span>
                        <span
                          class="ant-typography ant-typography-secondary"
                        >
                          Подкормка
                        </span>
                        <div
                          style="min-width: 0px; width: 100%;"
                        >
                          <div
                            aria-valuemax="100"
                            aria-valuemin="0"
                            aria-valuenow="30"
                            class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-small"
                            role="progressbar"
                            style="width: 100%;"
                          >
                            <div
                              class="ant-progress-outer"
                              style="width: 100%;"
                            >
                              <div
                                class="ant-progress-inner"
                              >
                                <div
                                  class="ant-progress-bg ant-progress-bg-outer"
                                  style="width: 30%; height: 6px; --progress-line-stroke-color: #fa8c16; background: rgb(250, 140, 22); --progress-percent: 0.3;"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                      style="align-self: stretch; min-width: 0px; width: 100%;"
                    >
                      <div
                        class="ant-flex ant-flex-wrap-wrap"
                        style="min-width: 0px; width: 100%; gap: 8px;"
                      >
                        <button
                          class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                          style="height: auto; max-width: 100%; min-height: 32px; min-width: 0px; white-space: normal;"
                          type="button"
                        >
                          <span>
                            Полил сегодня
                          </span>
                        </button>
                        <button
                          class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                          style="height: auto; max-width: 100%; min-height: 32px; min-width: 0px; white-space: normal;"
                          type="button"
                        >
                          <span>
                            Подкормил сегодня
                          </span>
                        </button>
                        <button
                          class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                          type="button"
                        >
                          <span>
                            Состояние
                          </span>
                        </button>
                        <a
                          data-discover="true"
                          href="/plants/plain/edit"
                          style="max-width: 100%; min-width: 0px;"
                        >
                          <button
                            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                            style="height: auto; max-width: 100%; min-height: 32px; min-width: 0px; white-space: normal;"
                            type="button"
                          >
                            <span>
                              Редактировать
                            </span>
                          </button>
                        </a>
                        <button
                          aria-describedby="id"
                          class="ant-btn ant-btn-default ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-outlined"
                          type="button"
                        >
                          <span>
                            Удалить
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-6"
              style="padding-left: 8px; padding-right: 8px; min-width: 0px;"
            >
              <div
                class="ant-card ant-card-bordered"
                style="min-width: 0px; width: 100%;"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-space ant-space-vertical ant-space-align-start ant-space-gap-row-middle ant-space-gap-col-middle"
                    style="min-width: 0px; width: 100%;"
                  >
                    <div
                      class="ant-space-item"
                      style="align-self: stretch; min-width: 0px; width: 100%;"
                    >
                      <div
                        class="plant-card__photo"
                      >
                        <div
                          class="ant-image"
                          title="Нажмите для просмотра"
                        >
                          <img
                            alt="Позже"
                            class="ant-image-img"
                            src="http://localhost:3001/legacy-thumb.jpg"
                            style="cursor: pointer; object-fit: cover; border-radius: 8px;"
                          />
                          <div
                            class="ant-image-mask"
                          >
                            <div
                              class="ant-image-mask-info"
                            >
                              <span
                                aria-label="eye"
                                class="anticon anticon-eye"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="eye"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                                  />
                                </svg>
                              </span>
                              Предпросмотр
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                      style="align-self: stretch; min-width: 0px; width: 100%;"
                    >
                      <h5
                        class="ant-typography"
                        style="margin: 0px;"
                      >
                        Позже
                      </h5>
                    </div>
                    <div
                      class="ant-space-item"
                      style="align-self: stretch; min-width: 0px; width: 100%;"
                    >
                      <div
                        style="align-items: center; column-gap: 8px; display: grid; grid-template-columns: max-content 1fr; row-gap: 4px; width: 100%;"
                      >
                        <span
                          class="ant-typography ant-typography-secondary"
                        >
                          Полив
                        </span>
                        <div
                          style="min-width: 0px; width: 100%;"
                        >
                          <div
                            aria-valuemax="100"
                            aria-valuemin="0"
                            aria-valuenow="100"
                            class="ant-progress ant-progress-status-success ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-small"
                            role="progressbar"
                            style="width: 100%;"
                          >
                            <div
                              class="ant-progress-outer"
                              style="width: 100%;"
                            >
                              <div
                                class="ant-progress-inner"
                              >
                                <div
                                  class="ant-progress-bg ant-progress-bg-outer"
                                  style="width: 100%; height: 6px; --progress-line-stroke-color: #52c41a; background: rgb(82, 196, 26); --progress-percent: 1;"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <span
                          class="ant-typography ant-typography-secondary"
                          style="font-size: 12px; grid-column: 1 / -1;"
                        >
                          через 7 дней
                        </span>
                        <span
                          class="ant-typography ant-typography-secondary"
                        >
                          Подкормка
                        </span>
                        <div
                          style="min-width: 0px; width: 100%;"
                        >
                          <div
                            aria-valuemax="100"
                            aria-valuemin="0"
                            aria-valuenow="30"
                            class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-small"
                            role="progressbar"
                            style="width: 100%;"
                          >
                            <div
                              class="ant-progress-outer"
                              style="width: 100%;"
                            >
                              <div
                                class="ant-progress-inner"
                              >
                                <div
                                  class="ant-progress-bg ant-progress-bg-outer"
                                  style="width: 30%; height: 6px; --progress-line-stroke-color: #fa8c16; background: rgb(250, 140, 22); --progress-percent: 0.3;"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                      style="align-self: stretch; min-width: 0px; width: 100%;"
                    >
                      <div
                        class="ant-flex ant-flex-wrap-wrap"
                        style="min-width: 0px; width: 100%; gap: 8px;"
                      >
                        <button
                          class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                          style="height: auto; max-width: 100%; min-height: 32px; min-width: 0px; white-space: normal;"
                          type="button"
                        >
                          <span>
                            Полил сегодня
                          </span>
                        </button>
                        <button
                          class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                          style="height: auto; max-width: 100%; min-height: 32px; min-width: 0px; white-space: normal;"
                          type="button"
                        >
                          <span>
                            Подкормил сегодня
                          </span>
                        </button>
                        <button
                          class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                          type="button"
                        >
                          <span>
                            Состояние
                          </span>
                        </button>
                        <a
                          data-discover="true"
                          href="/plants/later/edit"
                          style="max-width: 100%; min-width: 0px;"
                        >
                          <button
                            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                            style="height: auto; max-width: 100%; min-height: 32px; min-width: 0px; white-space: normal;"
                            type="button"
                          >
                            <span>
                              Редактировать
                            </span>
                          </button>
                        </a>
                        <button
                          aria-describedby="id"
                          class="ant-btn ant-btn-default ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-outlined"
                          type="button"
                        >
                          <span>
                            Удалить
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
